# shit-tracker

./: .gitignore
backend/: .env.example  database.py  main.py  migrate_deadline.py  models.py  pyproject.toml  schemas.py
backend/routers/: calendar.py  goals.py  tasks.py
backend/services/: google_calendar.py
backend/tests/: conftest.py  test_calendar.py  test_tasks.py
docs/superpowers/plans/: 2026-05-27-task-start-date-time-needed.md
docs/superpowers/specs/: 2026-05-27-task-start-date-time-needed-design.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/goals/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/components/calendar/: CalendarView.tsx
frontend/src/components/goals/: GoalCard.tsx  GoalForm.tsx
frontend/src/components/tasks/: TaskCard.tsx  TaskForm.tsx
frontend/src/components/ui/: Badge.tsx  Modal.tsx
frontend/src/lib/: api.ts  types.ts
